--- a/apps/core/add_rows_to_db.ipynb
+++ b/apps/core/add_rows_to_db.ipynb
@@ -2,17 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'mysql+pymysql://naya:NayaPass1!@35.193.190.203/temi_v3'"
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 4,
+   "outputs": [],
    "source": [
     "from apps.authentication.models import Users,Patient,Contact,ContactTime,Event,UserTime\n",
     "from apps import db\n",
@@ -38,9 +29,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
-   "source": [],
+   "source": [
+    "e = 'mysql+pymysql://naya:NayaPass1!@35.193.190.203/temi_v3'\n",
+    "engine = create_engine(e)\n",
+    "session = Session(engine)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "from apps.core import util as U\n",
+    "from apps.authentication.models import Event\n",
+    "engine = U.get_engine()\n",
+    "session = U.get_session(engine)\n",
+    "df = U.get_df(Event, session)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "7"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['status'] == 0].count\n",
+    "total_meets = df[df['status'] ==2].count().shape[0]\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "# average_meets_per_day = round(df_selection[\"Rating\"].mean(), 1)\n",
+    "df_last_meets = df[df['status'] ==2]\n",
+    "d = df_last_meets.groupby(by=[\"patient_id\"]).size().to_frame('data')['data']\n",
+    "# ].count()\n",
+    "# [[\"Total\"]].sort_values(by=\"Total\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Int64Index([100001, 200001], dtype='int64', name='patient_id')"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.index"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
